syntax = "proto3";

option java_multiple_files = true;
package org.entur.grpc.example;
import "greeting_message.proto";

// gRPC service definitions for sync messages
service GreetingService {

	rpc greeting1 (org.entur.grpc.example.GreetingRequest) returns (org.entur.grpc.example.GreetingResponse);
	
	rpc exceptionLogging (org.entur.grpc.example.GreetingRequest) returns (org.entur.grpc.example.GreetingResponse);

	rpc greeting3 (org.entur.grpc.example.GreetingRequest) returns (stream org.entur.grpc.example.GreetingResponse);
	
	rpc greeting4 (org.entur.grpc.example.GreetingRequest) returns (org.entur.grpc.example.GreetingResponse);

	rpc greeting5 (org.entur.grpc.example.GreetingRequest) returns (org.entur.grpc.example.GreetingResponse);

	// for test of filtering
	rpc noLogging (org.entur.grpc.example.GreetingRequest) returns (org.entur.grpc.example.GreetingResponse);

	rpc fullLogging (org.entur.grpc.example.GreetingRequest) returns (org.entur.grpc.example.GreetingResponse);

	rpc summaryLogging (org.entur.grpc.example.GreetingRequest) returns (org.entur.grpc.example.GreetingResponse);

}

